--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,18 +16,13 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Check Tag
-        id: check-tag
-        run: |
-          if [[ ${{ github.event.ref }} =~ ^refs/tags/v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
-              echo ::set-output name=match::true
-          fi
+    
       
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
    
-        if: steps.check-tag.outputs.match == 'true'
-   
+      - uses:  hanayeh1707/WeatherNotes/.github/workflow/main.yml@main
+      
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
