--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,7 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-
-   
+      - uses:  actions/checkout@v2
       - uses:  hanayeh1707/WeatherNotes/.github/workflows/reusable.yml@main
       
       # Runs a single command using the runners shell
