--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,13 +14,11 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     
-   #  uses:
-   #    hanayeh1707/WeatherNotes/.github/workflows/reusable.yml@main
-      
+    
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - uses:  actions/checkout@v2
-      - uses: ./.github/actions/reusable
+     # - uses: ./.github/actions/reusable
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
@@ -30,3 +28,7 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+  
+  test-caller:
+    uses: hanayeh1707/WeatherNotes/.github/workflows/reusable.yml@main
+    
