--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,5 @@ jobs:
           echo test, and deploy your project.
   
   test-caller:
-    uses: /./.github/workflows/reusable.yml@main
+    uses: ./.github/workflows/reusable.yml
     
