--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -20,7 +20,7 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-      - run: echo ${{test_var}}
+      - run: echo ${{secrets.test_var}}
       
       # Runs a single command using the runners shell
       - name: Run a one-line script
