--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -7,7 +7,7 @@ on:
 
   workflow_call:
     secrets:
-       test_var:
+       testvar:
          required: true
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -20,7 +20,7 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-      - run: echo ${{secrets.test_var}}
+      - run: echo ${{secrets.testvar}}
       
       # Runs a single command using the runners shell
       - name: Run a one-line script
